# denoising_research

./: CMakeLists.txt  README.md  denoise.cpp  denoise.h  main.cpp  noise.cpp  noise.h  wavelet2d.cpp  wavelet2d.h
